Add and test functions for db operations with urls
